// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - maven needles should match generated pom 1`] = `
{
  "pom.xml": {
    "contents": "<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <foo>bar</foo>
        <foo2>bar2</foo2>
    </properties>

    <dependencies>
        <dependency>
            <groupId>group</groupId>
            <artifactId>artifact</artifactId>
        </dependency>
        <dependency>
            <groupId>group</groupId>
            <artifactId>artifact2</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>exclusionGroupId</groupId>
                    <artifactId>exclusionArtifactId</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>profileId</id>
            <foo>bar</foo>
        </profile>
        <profile>
            <id>profileId2</id>
            <foo2>bar2</foo2>
        </profile>
    </profiles>
</project>
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - maven with empty configuration should generate only maven files 1`] = `
{
  ".mvn/jvm.config": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - maven with valid configuration should generate only maven files 1`] = `
{
  ".mvn/jvm.config": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/package-info.java": {
    "stateCleared": "modified",
  },
}
`;
